changed MediaBoxes to CropBoxes to solve problem with wrong boundingboxes of entities